# FlutterSystemsTemplate

./: .gitignore  README.md  pubspec.yaml
UI/: README.md  config.yaml  pubspec.yaml
UI/android/: .gitignore
UI/android/app/: CMakeLists.txt  build.gradle
UI/android/app/src/main/: AndroidManifest.xml
UI/android/app/src/main/java/com/example/flutter_sys_template/: TemplateWidget.kt
UI/android/app/src/main/kotlin/com/example/flutter_sys_template/: MainActivity.kt
UI/android/app/src/main/res/layout/: template_widget.xml
UI/android/app/src/main/res/xml/: template_widget_info.xml
UI/lib/: app_bloc.dart  app_model.dart  generated_bindings.dart  main.dart  native_json.dart
UI/lib/pages/: alpha.dart  beta.dart  map_solver.dart  one.dart
UI/linux/: CMakeLists.txt  my_application.cc
UI/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
UI/test/: app_model_test.dart
UI/windows/runner/: Runner.rc  main.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
json_library/: CMakeLists.txt  build.bat  build.sh
json_library/include/: json_bridge.def  json_bridge.hpp
json_library/scripts/: build.sh  build_all.bat  win_build.bat
json_library/src/: functions.def  json.hpp  json_bridge.cpp  json_bridge.def  json_bridge.hpp
json_library/src/dart/: dart_api_dl.c
json_library/src/mp/: map.h  micropather.cpp
lib/: main.dart
lib/ffi_utilities/: ffi_structs_lib.dart
lib/pages/: beta.dart  charlie.dart
lib/utilities/: ffi_test.dart
oboe_ffi/: .metadata  README.md  pubspec.yaml
oboe_ffi/android/: build.gradle  settings.gradle
oboe_ffi/android/src/main/: AndroidManifest.xml
oboe_ffi/example/: README.md  pubspec.yaml
oboe_ffi/example/android/app/: build.gradle
oboe_ffi/example/integration_test/: plugin_integration_test.dart
oboe_ffi/example/lib/: main.dart
oboe_ffi/example/linux/: CMakeLists.txt  my_application.cc
oboe_ffi/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
oboe_ffi/example/macos/Flutter/: GeneratedPluginRegistrant.swift
oboe_ffi/example/test/: widget_test.dart
oboe_ffi/example/windows/: CMakeLists.txt
oboe_ffi/lib/: oboe_ffi.dart  oboe_ffi_method_channel.dart  oboe_ffi_platform_interface.dart
oboe_ffi/linux/: CMakeLists.txt  oboe_ffi_plugin.cc  oboe_ffi_plugin_private.h
oboe_ffi/linux/test/: oboe_ffi_plugin_test.cc
oboe_ffi/macos/: oboe_ffi.podspec
oboe_ffi/macos/Classes/: OboeFfiPlugin.swift
oboe_ffi/test/: oboe_ffi_method_channel_test.dart  oboe_ffi_test.dart
oboe_ffi/windows/: CMakeLists.txt  oboe_ffi_plugin.cpp  oboe_ffi_plugin.h  oboe_ffi_plugin_c_api.cpp
oboe_ffi/windows/test/: oboe_ffi_plugin_test.cpp
structs_library/: CMakeLists.txt  structs.def  structs.h
web/: index.html  manifest.json
win_release/: README.md
win_release/scripts/: build_windows.ps1
windows/: CMakeLists.txt
(+16 files in other folders)
